Add PacRISA logo and Nomilo Fishpond images

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,6 +33,8 @@ format:
       <br>
       ![](/www/logos/uhm-logo.png) 
       <br><br>
+      ![](/www/logos/pac-risa-logo.png) 
+      <br><br>
 
 
 
