--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,10 +14,14 @@ website:
     left:
       - href: index.qmd
         text: About
+      - href: data-processing.qmd
+        text: Data Processing
+      - href: data-collection.qmd
+        text: Data Collection App
+      - href: eda.qmd
+        text: EDA App
       - href: correlational-analysis.qmd
         text: Correlational Analysis
-      - href: fieldwork-templates.qmd
-        text: Fieldwork Templates
   back-to-top-navigation: true
     
 format:
