Add WUR logo to the website and dashboard

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,6 +32,8 @@ format:
       <br>
       ![](/www/logos/uhm-logo.png) 
       <br><br>
+      ![](/www/logos/wur-logo.png) 
+      <br><br>
       ![](/www/logos/pac-risa-logo.png) 
       <br><br>
       ![](/www/logos/ksf-logo.png) 
